<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.yacineboulyali.bricole.ProfileActivity"
    tools:showIn="@layout/activity_profile"
    tools:ignore="ExtraText">s
    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@color/colorPrimary"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/user_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="22dp"
        android:layout_weight="0.16"
        android:gravity="center"
        android:text="@string/user_city"
        android:textSize="@dimen/user_city_txt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/imageView6"
        app:layout_constraintRight_toLeftOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/username"
        tools:ignore="InefficientWeight" />

    <TextView
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="111dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="111dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical|center_horizontal|center"
        android:text="Yacine Boulyali"
        android:textColor="@android:color/background_dark"
        android:textSize="@dimen/user_name_txt_size"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/user_job"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:padding="@dimen/user_description_txt_size"
        android:text="@string/user_description"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_city" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="8dp"
        android:layout_weight="0.15"
        android:contentDescription=""
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintLeft_toLeftOf="@+id/guideline7"
        app:layout_constraintRight_toLeftOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:srcCompat="@drawable/user_city_icon"
        tools:ignore="ContentDescription,VectorDrawableCompat" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:fontFamily="Myriad Pro"
        android:text="@string/projects"
        android:textColor="#ffffff"
        android:textSize="7pt"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/circleImageView"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        tools:ignore="HardcodedText,RtlHardcoded"
        tools:targetApi="jelly_bean" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:gravity="right"
        android:text="@string/ratings"
        android:textColor="#ffffff"
        android:textSize="7pt"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintLeft_toRightOf="@+id/circleImageView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry" />

    <GridView
        android:id="@+id/gridview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:columnWidth="30dp"

        android:horizontalSpacing="30dp"
        android:numColumns="3"
        android:verticalSpacing="@dimen/GridView_verticalSpacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_job"
        tools:ignore="NestedScrolling" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/yacine"
        app:civ_border_color="#ffffff"
        app:civ_border_width="4dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintLeft_toLeftOf="@+id/guideline7"
        app:layout_constraintRight_toLeftOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.21"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="119dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.11"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="63dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.32"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="182dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="0dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.69"
        tools:layout_editor_absoluteX="265dp"
        tools:layout_editor_absoluteY="0dp" />

</android.support.constraint.ConstraintLayout>