<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:elevation="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            app:popupTheme="@style/AppTheme"
            tools:ignore="UnusedAttribute" />
    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:src="@drawable/call_icon_24dp"
        app:backgroundTint="@android:color/holo_green_dark"
        app:layout_anchor="@+id/linearLayout"
        app:layout_anchorGravity="bottom|right"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:srcCompat="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.497" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.16"
        android:gravity="center"
        android:text="@string/user_city"
        android:textSize="9pt"
        tools:ignore="InefficientWeight"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintRight_toLeftOf="@+id/guideline8"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toRightOf="@+id/imageView6"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.529"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_vertical|center_horizontal|center"
        android:text="Yacine Boulyali"
        android:textColor="@android:color/background_dark"
        android:textSize="@dimen/user_name_txt_size"
        tools:ignore="HardcodedText"
        android:layout_marginLeft="111dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        android:layout_marginTop="8dp"
        android:layout_marginStart="111dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="1.0" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/user_description_txt_size"
        android:text="@string/user_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:contentDescription=""
        app:srcCompat="@drawable/user_city_icon"
        tools:ignore="ContentDescription,VectorDrawableCompat"
        android:layout_marginLeft="18dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline7"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        android:layout_marginStart="18dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline8"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.096"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:fontFamily="Myriad Pro"
        android:text="@string/projects"
        android:textColor="#ffffff"
        android:textSize="7pt"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/circleImageView"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        tools:ignore="HardcodedText,RtlHardcoded"
        tools:targetApi="jelly_bean"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:gravity="right"
        android:text="@string/ratings"
        android:textColor="#ffffff"
        android:textSize="7pt"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintLeft_toRightOf="@+id/circleImageView"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp" />

    <GridView
        android:id="@+id/gridview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:columnWidth="30dp"
        android:horizontalSpacing="30dp"
        android:numColumns="3"
        android:verticalSpacing="@dimen/GridView_verticalSpacing"
        tools:ignore="NestedScrolling"

        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/yacine"
        app:civ_border_color="#ffffff"
        app:civ_border_width="4dp"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintRight_toLeftOf="@+id/guideline8"
        app:layout_constraintLeft_toLeftOf="@+id/guideline7" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline4"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.21"
        tools:layout_editor_absoluteY="119dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.11"
        tools:layout_editor_absoluteY="63dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.32"
        tools:layout_editor_absoluteY="182dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline7"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="115dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline8"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.69"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="265dp" />

</android.support.constraint.ConstraintLayout>